[package]
name = "sarga"
version = "0.1.0"
authors = ["Bernd-L <git@bernd.pw>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/bernd-l/sarga"
homepage = "https://github.com/bernd-l/sarga#readme"
readme = "README.md"
documentation = "https://docs.rs/sarga"
description = "Saga pattern server for Rust"
include = [
  "/src",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE.md",
  "/target/doc",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
